--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,3 @@
-/* Go away goofy ass mf */
-
 :root {
     /* Sprite List */
     --background: ;
@@ -7,26 +5,39 @@
 
 html {
     width: 100%;
+    font-family: Verdana, sans-serif;
 }
 
 body {
     width: 100%;
+    margin: 0;
 }
 
 main {
-    top: 25px;
+    top: 30px;
     width: 100%;
     background-image: var(--background);
 }
 
+
 /* Header */
 
 header {
+    display: flex;
     top: 0;
     left: 0;
     width: 100%;
-    height: 25px;
-    background-color: #fff;
+    height: 30px;
+    background-color: #666;
+    box-shadow: 0 0 8px 2px #000;
+}
+
+header span {
+    font-weight: 600;
+    padding: 0 6px;
+    width: calc(100% / 3);
+    line-height: 30px;
+    color: #fff;
 }
 
 
