--- a/assets/main.css
+++ b/assets/main.css
@@ -111,7 +111,7 @@ footer {
     margin: 3px 2px;
 }
 
-#save-menu button[onclick="save(1, true)"] {
+.menu button[onclick="save(1, true)"] {
     margin: 18px 2px 3px
 }
 
@@ -123,7 +123,7 @@ footer {
 
 /* Saving/Loading */
 
-#save-menu {
+#saving-menu {
     top: 108px;
     border-radius: 0 10px 10px 0;
 }
@@ -141,6 +141,10 @@ footer {
     font-family: 'Courier New', monospace;
     font-weight: 700;
     font-size: 14px;
+}
+
+#catching-menu {
+    
 }
 
 
